Update AstroNvim setup guide with manual installation steps
Documented working installation process using pre-compiled parser
to avoid ABI version conflicts during tree-sitter generation

--- a/tree-sitter-pdat-dsl/.gitignore
+++ b/tree-sitter-pdat-dsl/.gitignore
@@ -1,9 +1,9 @@
 node_modules/
 build/
-src/parser.c
+# Keep src/parser.c (pre-generated for ABI v14)
+# src/parser.c
 src/tree_sitter/
 *.o
 *.so
 *.dylib
 *.a
-package-lock.json
