Major refactor: Multi-core support and technical debt cleanup
This commit makes the DSL portable across different RISC-V cores and
removes unused code, significantly simplifying the codebase.

BREAKING CHANGES:
- Removed module generation mode (only inline assumptions now)
- Removed SMT2 constraint generation
- Removed VCS randomization constraints
- Removed CLI commands: smt-constraints, random-constraints
- Removed CLI flags: --inline, --module-name, --bind-file

New Features:

1. **Multi-Core Support via YAML Configs**:
   - Added pdat_dsl/config.py with CoreConfig system
   - Configs for Ibex (RV32), BOOM (RV64), Rocket (RV64)
   - CLI: --config <file> or --target <ibex|boom|rocket>
   - Auto-detects data width (32-bit vs 64-bit) from architecture

2. **JSON Schema Validation**:
   - Validates config structure on load
   - Clear error messages for invalid configs
   - configs/schema.yaml documents expected structure
   - Added jsonschema>=3.0 dependency

3. **Removed Ibex-Specific Hardcoding**:
   - All signal names now from config
   - Supports different module hierarchies
   - Configurable VCD prefixes per core

Code Simplification:
- Deleted pdat_dsl/smt_constraints.py (unused)
- Deleted pdat_dsl/random_constraints.py (unused)
- Deleted generate_sv_module() and generate_bind_file()
- Removed 300+ lines of dead code
- Single code generation path (inline only)

Signal Dependencies Removed:
- No more rst_ni checks in assumptions (always active for ABC)
- No more instr_valid_i dependency
- No more instr_is_compressed_i signal - uses instr[1:0] directly
- Simpler assumptions = better ABC optimization

Configuration Structure:
  core_name: string
  architecture: rv32 | rv64
  signals:
    instruction_data: signal_name
    pc: signal_name
    operands:
      alu: {rs1, rs2}
      multdiv: {rs1, rs2}
  vcd:
    testbench_prefix: string

Usage:
  pdat-dsl codegen example.dsl out.sv              # Default: Ibex
  pdat-dsl codegen --target boom example.dsl out.sv
  pdat

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,10 @@ classifiers = [
     "Topic :: System :: Hardware",
 ]
 
-dependencies = []
+dependencies = [
+    "pyyaml>=5.0",
+    "jsonschema>=3.0",
+]
 
 [project.optional-dependencies]
 dev = [
