Add injection point to core configs
Added 'injection' field to core configurations to specify where inline
assumptions should be injected in the module hierarchy.

Changes:
- Added InjectionPoint dataclass with module_path and description
- Updated all configs (ibex.yaml, boom.yaml, rocket.yaml) with injection
- Updated JSON schema to require injection field
- Generated code now includes comment showing injection location

This makes it clear to users exactly where to place the generated
assumptions in their RTL:
- Ibex: ibex_core.id_stage_i (ID/Decode stage)
- BOOM: BoomCore.exe_units_0 (Execution unit 0)
- Rocket: RocketTile.core (Main pipeline)

Example generated header:
  // Inject into: ibex_core.id_stage_i
  // Location: ID/Decode stage - where instructions are decoded

--- a/configs/boom.yaml
+++ b/configs/boom.yaml
@@ -10,6 +10,11 @@
 core_name: "boom"
 architecture: "rv64"  # BOOM supports RV64GC
 
+# Where to inject inline assumptions
+injection:
+  module_path: "BoomCore.exe_units_0"
+  description: "Execution unit 0 - where decoded micro-ops are executed"
+
 # Signal naming conventions for BOOM (example - verify against your BOOM version)
 signals:
   # Instruction and PC signals
