--- a/configs/rocket.yaml
+++ b/configs/rocket.yaml
@@ -7,6 +7,11 @@
 core_name: "rocket"
 architecture: "rv64"  # Rocket supports RV64GC
 
+# Where to inject inline assumptions
+injection:
+  module_path: "RocketTile.core"
+  description: "Rocket core - main pipeline"
+
 # Signal naming conventions for Rocket (example - verify against your Rocket version)
 signals:
   # Instruction and PC signals
