--- a/configs/riscvsinglecycle.yaml
+++ b/configs/riscvsinglecycle.yaml
@@ -6,18 +6,18 @@ architecture: "rv32"
 
 # Where to inject inline assumptions (single injection point for DSL codegen)
 injection:
-  module_path: "RiscvSingleCycle_riscv_core.control_inst"
-  description: "Control unit - combinational instruction decoder"
+  module_path: "RiscvSingleCycle_riscv_core"
+  description: "Top-level core - has sequential context with PC/regfile"
 
 # Signal naming conventions
 signals:
-  # Clock/reset (control is combinational, so use dummy reset that's always true)
+  # Clock/reset
   clk: "clk"
-  rst_n: "1'b1"  # Control has no reset - use constant true
-  
-  # Instruction signal in control module
-  instruction_data: "instruction"
-  
+  rst_n: "rst_n"  # Active-low reset in top-level core
+
+  # Instruction signal in top-level core
+  instruction_data: "imem_rdata"  # Instruction from memory
+
   # PC signal
   pc: "pc"
 
